--- a/app/src/main/res/layout/webview.xml
+++ b/app/src/main/res/layout/webview.xml
@@ -13,10 +13,11 @@
         android:layout_gravity="center"
         android:visibility="visible" />
 
-    <WebView
+    <org.martne.breedlocator.AdvancedWebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone" />
+        android:visibility="gone"
+        />
 
 </RelativeLayout>
